# courseflow

./: .gitignore  README.md  courseflow-deep-review-2026-06-11.html  courseflow-intern-roadmap.html  courseflow-production-review.html  courseflow-training-detailed.html  courseflow-training.html  identity-service-auth-flow.html
ai/platform/: pyproject.toml
ai/platform/capabilities/: registry.yaml
ai/platform/data-contracts/: registry.yaml
ai/platform/evaluation/: registry.yaml
ai/platform/intake/: use-case-requests.yaml
ai/platform/lifecycle/: model-lifecycle.md
ai/platform/prompt-safety/: redaction-policy.yaml
ai/platform/tests/: test_admin_ops_dashboard.py  test_ai_module_catalog.py  test_capability_taxonomy.py  test_causal_uplift_service.py  test_cli.py  test_coverage_taxonomy.py  test_data_contracts.py  test_delivery_backlog.py  test_delivery_owner_views.py  test_delivery_sla.py  test_delivery_state_ledger.py  test_evaluation.py  test_evidence.py  test_forecasting_service.py  test_governance_evaluation_incidents.py  test_governance_evaluation_ops.py  test_governance_evaluation_response_drill.py  test_governance_evaluation_service.py  test_graph_entity_service.py  test_llm_provider_adapter.py  test_llm_provider_alerts.py  test_llm_provider_readiness.py  test_llm_provider_runtime_probes.py  test_llm_provider_secret_rotation.py  test_media_intelligence_service.py  test_media_privacy_review.py  test_model_audit.py  test_model_serving.py  test_model_serving_adapter.py  test_model_serving_auth.py  test_nlp_understanding_service.py  test_operating_cockpit.py  test_payment_fraud_service.py  test_product_readiness.py  test_product_readiness_freshness.py  test_product_readiness_freshness_incidents.py  test_product_readiness_freshness_response_drill.py  test_product_readiness_freshness_response_metrics.py  test_product_readiness_freshness_response_slo_drift_alert_calibration.py  test_product_readiness_freshness_response_slo_drift_alert_drill.py  (+35 more)
ai/recommendation-ml-service/: Dockerfile  pyproject.toml
ai/services/causal-uplift-service/: Dockerfile  Makefile  README.md  pyproject.toml  service.yaml
ai/services/forecasting-service/: Dockerfile  Makefile  README.md  pyproject.toml  service.yaml
ai/services/governance-evaluation-service/: Dockerfile  Makefile  README.md  pyproject.toml  service.yaml
ai/services/graph-entity-service/: Dockerfile  Makefile  README.md  pyproject.toml  service.yaml
ai/services/llm-adapter-service/: Dockerfile  Makefile  README.md  pyproject.toml  service.yaml
ai/services/model-serving-service/: Dockerfile  Makefile  README.md  pyproject.toml  service.yaml
ai/services/rag-answer-service/: Dockerfile  (+4 more)
df/: Makefile  README.md  pyproject.toml
df/catalog/: README.md  catalog-bundle.md
df/contracts/: README.md  event-envelope.v1.schema.json
df/docs/: enterprise-data-platform-architecture.md  technology-stack.md
df/governance/: README.md  access-grants.yaml  backfill-requests.yaml  change-requests.yaml  scope-guardrails.yaml  source-activations.yaml
df/ops-runbooks/: data-platform-p0-gates.md
df/platform/: README.md
df/products/: README.md
df/templates/: product-onboarding.template.yaml
df/tests/: test_access_governance.py  test_access_grants.py  test_access_policy.py  test_attestations.py  test_backfill.py  test_billing_revenue_pipeline.py  test_bronze_ingestion.py  test_capabilities.py  test_catalog_export.py  test_catalog_publish.py  test_change_requests.py  test_contract_validation.py  test_control_tower.py  test_customer_360_pipeline.py  test_enterprise_kpi_scorecard.py  test_environment_manifests.py  test_finance_pipeline.py  test_identity_access_pipeline.py  test_observability_export.py  test_offset_ledger.py  test_openlineage_export.py  test_pipeline_registry.py  test_pipeline_registry_manifest.py  test_portfolio.py  test_quality_profiles.py  test_recommendation_pipeline.py  test_recommendation_slice_orchestration.py  test_release_profiles.py  test_release_promotion.py  test_retention.py  test_runtime_topology.py  test_schema_registry.py  test_semantic_metrics.py  test_semantic_views.py  test_snapshot_evidence.py  test_source_activate.py  test_source_activation_ledger.py  test_source_activation_ops_report.py  test_source_bridge.py  test_source_readiness_bundle.py  (+3 more)
df/use-cases/: README.md  registry.yaml
dp/: Makefile  README.md  pyproject.toml
dp/catalog/: README.md  catalog-bundle.md
dp/contracts/: README.md  data-product-contract.template.yaml  event-envelope.v1.schema.json
dp/docs/: enterprise-data-platform-architecture.md
dp/domains/: README.md  registry.yaml
dp/governance/: README.md  access-grants.yaml  backfill-requests.yaml  change-requests.yaml  incidents.yaml  scope-guardrails.yaml  semantic-metric-certifications.yaml  source-activations.yaml
dp/ops-runbooks/: data-platform-p0-gates.md
dp/products/: README.md
dp/templates/: README.md
dp/tests/: test_access_governance.py  test_access_grants.py  test_access_policy.py  test_attestations.py  test_backfill.py  test_billing_revenue_pipeline.py  test_broker_acl_smoke.py  test_bronze_ingestion.py  test_capabilities.py  test_catalog_cross_engine_smoke.py  test_catalog_export.py  test_catalog_lineage_ops.py  test_catalog_publish.py  test_catalog_runtime_ops.py  test_change_requests.py  test_contract_impact.py  test_contract_validation.py  test_control_tower.py  test_customer_360_pipeline.py  test_dagster_day2_smoke.py  test_dagster_orchestration_smoke.py  test_data_plane_smoke.py  test_enterprise_kpi_scorecard.py  test_environment_manifests.py  test_event_backbone_smoke.py  test_finance_pipeline.py  test_iac_contract_engine.py  test_iceberg_catalog_smoke.py  test_identity_access_pipeline.py  test_incidents.py  test_ingestion_runtime.py  test_lakehouse_ops.py  test_live_bronze_ingestion_smoke.py  test_live_lakehouse_smoke.py  test_live_quality_slo_smoke.py  test_lms_recommendation_training_pipeline.py  test_object_store_smoke.py  test_observability_export.py  test_offset_ledger.py  test_oidc_auth_smoke.py  (+42 more)
dp/use-cases/: README.md  registry.yaml
(+1951 files in other folders)
