[project]
name = "enterprise-dp"
version = "0.1.0"
description = "Enterprise data platform contracts, validation tooling and local pipeline skeletons."
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34",
  "cryptography>=42.0",
  "dagster>=1.8,<2",
  "duckdb>=1.0",
  "psycopg[binary]>=3.1",
  "pyarrow>=16.0",
  "pyiceberg[pyarrow,sql-sqlite]>=0.8,<1",
  "PyYAML>=6.0",
]

[project.scripts]
enterprise-dp = "enterprise_dp.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
