[project]
name = "courseflow-ai-platform"
version = "0.1.0"
description = "Enterprise AI Platform registry and governance tooling."
requires-python = ">=3.11,<3.13"
dependencies = [
    "PyYAML>=6.0,<7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0"
]

[project.scripts]
courseflow-ai-platform = "courseflow_ai_platform.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true

