[project]
name = "courseflow-recommendation-ml-service"
version = "0.1.0"
description = "CourseFlow Python ML service for related-course recommendation training, model registry and inference."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "SQLAlchemy>=2.0,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "alembic>=1.13,<2.0",
    "PyJWT[crypto]>=2.9,<3.0",
    "httpx>=0.27,<1.0",
    "prometheus-client>=0.20,<1.0",
    "numpy>=2.0,<3.0",
    "scikit-learn>=1.5,<2.0",
    "joblib>=1.4,<2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0"
]

[project.scripts]
courseflow-ml = "courseflow_ml.training.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
