[project]
name = "courseflow-causal-uplift-service"
version = "0.1.0"
description = "Policy-enforced causal uplift evaluation service for the CourseFlow AI Platform."
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
]

[project.scripts]
courseflow-causal-uplift = "courseflow_causal_uplift_service.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
