[project]
name = "courseflow-governance-evaluation-service"
version = "0.1.0"
description = "Policy-enforced governance, safety and evaluation gate service for the CourseFlow AI Platform."
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
]

[project.scripts]
courseflow-governance-evaluation = "courseflow_governance_evaluation_service.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../../platform/src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
