[project]
name = "courseflow-graph-entity-service"
version = "0.1.0"
description = "Policy-enforced graph entity-link evidence service for the CourseFlow AI Platform."
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
]

[project.scripts]
courseflow-graph-entity = "courseflow_graph_entity_service.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
