[project]
name = "courseflow-llm-adapter-service"
version = "0.1.0"
description = "CourseFlow AI Platform LLM adapter service package."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
courseflow-llm-adapter = "courseflow_llm_adapter_service.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "src",
  "../../platform/src",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
