[project]
name = "courseflow-nlp-understanding-service"
version = "0.1.0"
description = "Policy-enforced NLP and transformer-upgrade understanding service for the CourseFlow AI Platform."
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
]

[project.scripts]
courseflow-nlp-understanding = "courseflow_nlp_understanding_service.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../../platform/src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
