[project]
name = "courseflow-rag-answer-service"
version = "0.1.0"
description = "Policy-enforced grounded RAG answer service for the CourseFlow AI Platform."
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
]

[project.scripts]
courseflow-rag-answer = "courseflow_rag_answer_service.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../../platform/src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
