[project]
name = "courseflow-retrieval-service"
version = "0.1.0"
description = "CourseFlow AI Platform retrieval and RAG search service package."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "PyYAML>=6.0,<7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "ruff>=0.6,<1.0"
]

[project.scripts]
courseflow-retrieval = "courseflow_retrieval_service.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../../platform/src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
