[project]
name = "courseflow-routing-policy-service"
version = "0.1.0"
description = "Policy-enforced routing policy simulator service for the CourseFlow AI Platform."
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
]

[project.scripts]
courseflow-routing-policy = "courseflow_routing_policy_service.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
